限制购票后，用户购票页面显示余票

--- a/WebContent/public/css/stop.css
+++ b/WebContent/public/css/stop.css
@@ -59,6 +59,16 @@
     cursor: pointer;
 }
 
+.limit{
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.limit span{
+    color: #FA851B;
+}
+
 
 #mapframe{
     width: 100%;
